index.html updated

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </div>
 
           <button type="submit" class="btn generate-btn">Generate Complete Timetable</button>
-          <div id="timetableGenStatus" style="margin-top: 8px; font-size: 0.95em; color: #555"></div>
+          <div id="timetableGenStatus">This is demo</div>
         </form>
       </div>
 
@@ -110,7 +110,7 @@
       <div class="tab-content" id="timetable-content">
         <h2 class="section-title" id="timetable-title">Generated Timetable</h2>
 
-        <!-- Dynamic Timetable Container -->
+        <!-- Generate Timetable Container -->
         <div id="dynamic-timetable">
           <div class="timetable-placeholder">
             <div class="placeholder-content">
@@ -336,7 +336,8 @@
                 id="departmentName"
                 name="departmentName"
                 placeholder="e.g., Computer Engineering, Information Technology"
-                required />
+                required
+              />
             </div>
           </div>
           <button type="submit" class="btn">Add Department</button>
