saved timetable section added

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
       </div>
 
-      <!-- AI Timetable Generator Section -->
+      <!-- Timetable Generator Section -->
       <div class="generator-panel">
         <h2>Timetable Generator</h2>
         <p>Automatically generate subjects, faculty, and optimized timetable.</p>
@@ -93,7 +93,7 @@
           </div>
 
           <button type="submit" class="btn generate-btn">Generate Complete Timetable</button>
-          <div id="timetableGenStatus">This is demo</div>
+          <div id="timetableGenStatus"></div>
         </form>
       </div>
 
@@ -120,14 +120,6 @@
                 <button onclick="scrollToGenerator()" class="btn">Generate Timetable</button>
               </div>
             </div>
-          </div>
-        </div>
-
-        <!-- Subject Summary Section -->
-        <div id="subject-summary" style="display: none">
-          <h2 class="section-subtitle">Subject Summary</h2>
-          <div class="stats-grid" id="subject-stats-grid">
-            <!-- Dynamic subject stats will be populated here -->
           </div>
         </div>
 
