--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
       <!-- Navigation Tabs -->
       <div class="tabs">
         <button class="tab active" id="timetable-tab">Timetable</button>
+        <button class="tab" id="departments-tab">Courses & Departments</button>
         <button class="tab" id="faculty-tab">Faculty</button>
         <button class="tab" id="subjects-tab">Subjects</button>
         <button class="tab" id="room-tab">Rooms</button>
-        <button class="tab" id="departments-tab">Departments</button>
       </div>
 
       <!-- Timetable Section -->
@@ -112,6 +112,7 @@
 
         <!-- Generate Timetable Container -->
         <div id="dynamic-timetable">
+          <!-- When no timetables are generated, this will show -->
           <div class="timetable-placeholder">
             <div class="placeholder-content">
               <h3>No Timetable Generated Yet</h3>
@@ -130,197 +131,22 @@
         </div>
       </div>
 
-      <!-- Faculty Section -->
-      <div class="tab-content hidden" id="faculty-content">
-        <form id="facultyForm" class="form-section">
-          <h2>Add New Faculty</h2>
-          <p>Add faculty members with their details and specialization.</p>
-          <div class="form-row">
-            <div class="form-group">
-              <label>Faculty Name</label>
-              <input type="text" id="facultyName" name="facultyName" placeholder="John Smith" required />
-            </div>
-            <div class="form-group">
-              <label>Specialization</label>
-              <input
-                type="text"
-                id="facultySpecialization"
-                name="facultySpecialization"
-                placeholder="e.g., Data Structures, AI"
-                required
-              />
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="form-group">
-              <label>Department</label>
-              <select id="facultyDepartment" name="facultyDepartment" required>
-                <option value="">Select department</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label>Email</label>
-              <input
-                type="email"
-                id="facultyEmail"
-                name="facultyEmail"
-                placeholder="john.smith@university.edu"
-                required
-              />
-            </div>
-          </div>
-          <button type="submit" class="btn">Add Faculty</button>
-        </form>
-        <div class="list-section">
-          <h3>All Faculty</h3>
-          <div id="facultyList" class="faculty-list"></div>
-        </div>
-      </div>
-
-      <!-- Subjects Section -->
-      <div class="tab-content hidden" id="subjects-content">
-        <form id="subjectForm" class="form-section">
-          <h2>Add New Subject</h2>
-          <p>Configure subjects with their lecture and lab hour requirements</p>
-          <div class="form-row">
-            <div class="form-group">
-              <label>Subject Name</label>
-              <input type="text" id="subjectName" name="subjectName" placeholder="e.g. Data Structures" required />
-            </div>
-            <div class="form-group">
-              <label>Subject Code</label>
-              <input type="text" id="subjectCode" name="subjectCode" placeholder="e.g. CS201" required />
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="form-group">
-              <label>Course/Program Name</label>
-              <select id="subjectCourse" name="subjectCourse" required>
-                <option value="">Select course</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label>Department</label>
-              <select id="subjectDepartment" name="subjectDepartment" required>
-                <option value="">Select department</option>
-              </select>
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="form-group">
-              <label>Lecture Hours</label>
-              <input type="number" id="lectureHours" name="lectureHours" placeholder="3" min="0" required />
-            </div>
-            <div class="form-group">
-              <label>Lab Hours</label>
-              <input type="number" id="labHours" name="labHours" placeholder="2" min="0" required />
-            </div>
-            <div class="form-group">
-              <label>Total Hours/Week</label>
-              <input type="number" id="totalHours" name="totalHours" placeholder="5" min="1" readonly />
-            </div>
-            <div class="form-group">
-              <label>Lab Duration (per session)</label>
-              <select id="labDuration" name="labDuration">
-                <option value="0">No Lab</option>
-                <option value="1">1 Hour</option>
-                <option value="2" selected>2 Hours</option>
-                <option value="3">3 Hours</option>
-                <option value="4">4 Hours</option>
-              </select>
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="form-group">
-              <label>Assigned Faculty</label>
-              <select id="assignedFaculty" name="assignedFaculty" required>
-                <option value="">Select faculty</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label>Semester</label>
-              <select id="subjectSemester" name="subjectSemester" required>
-                <option value="">Select semester</option>
-              </select>
-            </div>
-          </div>
-          <button type="submit" class="btn">Add Subject</button>
-        </form>
-        <div class="list-section">
-          <h3>All Subjects</h3>
-          <div id="subjectList" class="subject-list"></div>
-        </div>
-      </div>
-
-      <!-- Room Section -->
-      <div class="tab-content hidden" id="room-content">
-        <form id="roomForm" class="form-section">
-          <h2>Add New Room</h2>
-          <p>Add classroom and labs with their specifications</p>
-          <div class="form-row">
-            <div class="form-group">
-              <label>Room Number</label>
-              <input type="text" id="roomNumber" name="roomNumber" placeholder="e.g., A101, Lab-201" required />
-            </div>
-            <div class="form-group">
-              <label>Room Type</label>
-              <select id="roomType" name="roomType" required>
-                <option value="">Select room type</option>
-              </select>
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="form-group">
-              <label>Building</label>
-              <input
-                type="text"
-                id="roomBuilding"
-                name="roomBuilding"
-                placeholder="e.g., Main Building, IT Block"
-                required
-              />
-            </div>
-            <div class="form-group">
-              <label>Floor</label>
-              <select id="roomFloor" name="roomFloor" required>
-                <option value="">Select floor</option>
-                <option value="Ground Floor">Ground Floor</option>
-                <option value="1st Floor">1st Floor</option>
-                <option value="2nd Floor">2nd Floor</option>
-                <option value="3rd Floor">3rd Floor</option>
-                <option value="4th Floor">4th Floor</option>
-              </select>
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="form-group">
-              <label>Capacity</label>
-              <input type="number" id="roomCapacity" name="roomCapacity" placeholder="e.g., 60" min="1" required />
-            </div>
-            <div class="form-group">
-              <label>Equipment (Optional)</label>
-              <input
-                type="text"
-                id="roomEquipment"
-                name="roomEquipment"
-                placeholder="e.g., Projector, AC, Lab Equipment"
-              />
-            </div>
-          </div>
-          <button type="submit" class="btn">Add Room</button>
-        </form>
-        <div class="list-section">
-          <h3>All Rooms</h3>
-          <div id="roomList" class="room-list"></div>
-        </div>
-      </div>
-
       <!-- Departments Section -->
       <div class="tab-content hidden" id="departments-content">
-        <form id="departmentForm" class="form-section">
-          <h2>Add New Department</h2>
-          <p>Manage academic departments and branches</p>
+        <form id="courseForm" class="form-section">
+          <h2>Add New Course & Department</h2>
+          <p>Manage academic courses and their departments</p>
           <div class="form-row">
+            <div class="form-group">
+              <label>Course Name</label>
+              <input
+                type="text"
+                id="courseName"
+                name="courseName"
+                placeholder="e.g., Bachelor of Engineering, Master of Science"
+                required
+              />
+            </div>
             <div class="form-group">
               <label>Department Name</label>
               <input
@@ -332,12 +158,197 @@
               />
             </div>
           </div>
-          <button type="submit" class="btn">Add Department</button>
+          <button type="submit" class="btn">Add Course & Department</button>
         </form>
         <div class="list-section">
-          <h3>All Departments</h3>
-          <div id="departmentList" class="department-list"></div>
+          <h3>All Course & Department Combinations</h3>
+          <div id="courseDepartmentList" class="course-department-list"></div>
         </div>
+      </div>
+    </div>
+
+    <!-- Faculty Section -->
+    <div class="tab-content hidden" id="faculty-content">
+      <form id="facultyForm" class="form-section">
+        <h2>Add New Faculty</h2>
+        <p>Add faculty members with their details and specialization.</p>
+        <div class="form-row">
+          <div class="form-group">
+            <label>Faculty Name</label>
+            <input type="text" id="facultyName" name="facultyName" placeholder="John Smith" required />
+          </div>
+          <div class="form-group">
+            <label>Specialization</label>
+            <input
+              type="text"
+              id="facultySpecialization"
+              name="facultySpecialization"
+              placeholder="e.g., Data Structures, AI"
+              required
+            />
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group">
+            <label>Department</label>
+            <select id="facultyDepartment" name="facultyDepartment" required>
+              <option value="">Select department</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label>Email</label>
+            <input
+              type="email"
+              id="facultyEmail"
+              name="facultyEmail"
+              placeholder="john.smith@university.edu"
+              required
+            />
+          </div>
+        </div>
+        <button type="submit" class="btn">Add Faculty</button>
+      </form>
+      <div class="list-section">
+        <h3>All Faculty</h3>
+        <div id="facultyList" class="faculty-list"></div>
+      </div>
+    </div>
+
+    <!-- Subjects Section -->
+    <div class="tab-content hidden" id="subjects-content">
+      <form id="subjectForm" class="form-section">
+        <h2>Add New Subject</h2>
+        <p>Configure subjects with their lecture and lab hour requirements</p>
+        <div class="form-row">
+          <div class="form-group">
+            <label>Subject Name</label>
+            <input type="text" id="subjectName" name="subjectName" placeholder="e.g. Data Structures" required />
+          </div>
+          <div class="form-group">
+            <label>Subject Code</label>
+            <input type="text" id="subjectCode" name="subjectCode" placeholder="e.g. CS201" required />
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group">
+            <label>Course/Program Name</label>
+            <select id="subjectCourse" name="subjectCourse" required>
+              <option value="">Select course</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label>Department</label>
+            <select id="subjectDepartment" name="subjectDepartment" required>
+              <option value="">Select department</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group">
+            <label>Lecture Hours</label>
+            <input type="number" id="lectureHours" name="lectureHours" placeholder="3" min="0" required />
+          </div>
+          <div class="form-group">
+            <label>Lab Hours</label>
+            <input type="number" id="labHours" name="labHours" placeholder="2" min="0" required />
+          </div>
+          <div class="form-group">
+            <label>Total Hours/Week</label>
+            <input type="number" id="totalHours" name="totalHours" placeholder="5" min="1" readonly />
+          </div>
+          <div class="form-group">
+            <label>Lab Duration (per session)</label>
+            <select id="labDuration" name="labDuration">
+              <option value="0">No Lab</option>
+              <option value="1">1 Hour</option>
+              <option value="2" selected>2 Hours</option>
+              <option value="3">3 Hours</option>
+              <option value="4">4 Hours</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group">
+            <label>Assigned Faculty</label>
+            <select id="assignedFaculty" name="assignedFaculty" required>
+              <option value="">Select faculty</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label>Semester</label>
+            <select id="subjectSemester" name="subjectSemester" required>
+              <option value="">Select semester</option>
+            </select>
+          </div>
+        </div>
+        <button type="submit" class="btn">Add Subject</button>
+      </form>
+      <div class="list-section">
+        <h3>All Subjects</h3>
+        <div id="subjectList" class="subject-list"></div>
+      </div>
+    </div>
+
+    <!-- Room Section -->
+    <div class="tab-content hidden" id="room-content">
+      <form id="roomForm" class="form-section">
+        <h2>Add New Room</h2>
+        <p>Add classroom and labs with their specifications</p>
+        <div class="form-row">
+          <div class="form-group">
+            <label>Room Number</label>
+            <input type="text" id="roomNumber" name="roomNumber" placeholder="e.g., A101, Lab-201" required />
+          </div>
+          <div class="form-group">
+            <label>Room Type</label>
+            <select id="roomType" name="roomType" required>
+              <option value="">Select room type</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group">
+            <label>Building</label>
+            <input
+              type="text"
+              id="roomBuilding"
+              name="roomBuilding"
+              placeholder="e.g., Main Building, IT Block"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label>Floor</label>
+            <select id="roomFloor" name="roomFloor" required>
+              <option value="">Select floor</option>
+              <option value="Ground Floor">Ground Floor</option>
+              <option value="1st Floor">1st Floor</option>
+              <option value="2nd Floor">2nd Floor</option>
+              <option value="3rd Floor">3rd Floor</option>
+              <option value="4th Floor">4th Floor</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group">
+            <label>Capacity</label>
+            <input type="number" id="roomCapacity" name="roomCapacity" placeholder="e.g., 60" min="1" required />
+          </div>
+          <div class="form-group">
+            <label>Equipment (Optional)</label>
+            <input
+              type="text"
+              id="roomEquipment"
+              name="roomEquipment"
+              placeholder="e.g., Projector, AC, Lab Equipment"
+            />
+          </div>
+        </div>
+        <button type="submit" class="btn">Add Room</button>
+      </form>
+      <div class="list-section">
+        <h3>All Rooms</h3>
+        <div id="roomList" class="room-list"></div>
       </div>
     </div>
 
