--- a/index.html
+++ b/index.html
@@ -103,9 +103,7 @@
           <button type="submit" class="btn generate-btn">
             Generate Complete Timetable
           </button>
-          <div
-            id="timetableGenStatus"
-            style="margin-top: 8px; font-size: 0.95em; color: #555"></div>
+          <div id="timetableGenStatus"></div>
         </form>
       </div>
 
