--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
       <!-- Timetable Generator Section -->
       <div class="generator-panel">
         <h2>Timetable Generator</h2>
-        <p>
-          Automatically generate subjects, faculty, and optimized timetable.
-        </p>
+        <p>Automatically generate subjects, faculty, and optimized timetable.</p>
         <form id="timetableGenForm" class="generator-form">
           <div class="form-row">
             <div class="form-group">
@@ -81,12 +79,7 @@
             </div>
             <div class="form-group">
               <label>Number of Students</label>
-              <input
-                type="number"
-                id="genStudents"
-                placeholder="60"
-                min="1"
-                required />
+              <input type="number" id="genStudents" placeholder="60" min="1" required />
             </div>
           </div>
           <div class="form-row">
@@ -100,11 +93,6 @@
             </div>
           </div>
 
-          <button type="submit" class="btn generate-btn">
-            Generate Complete Timetable
-          </button>
-          <div
-            id="timetableGenStatus"></div>
           <button type="submit" class="btn generate-btn">Generate Complete Timetable</button>
           <div id="timetableGenStatus"></div>
         </form>
@@ -131,19 +119,14 @@
               <h3>No Timetable Generated Yet</h3>
               <p>Use the Timetable Generator above to create your schedule</p>
               <div class="btn-container">
-                <button onclick="scrollToGenerator()" class="btn">
-                  Generate Timetable
-                </button>
+                <button onclick="scrollToGenerator()" class="btn">Generate Timetable</button>
               </div>
             </div>
           </div>
         </div>
 
         <!-- Saved Timetables Section -->
-        <div
-          id="saved-timetables-section"
-          class="list-section"
-          style="display: none; margin-top: 24px">
+        <div id="saved-timetables-section" class="list-section" style="display: none; margin-top: 24px">
           <h3>Saved Timetables</h3>
           <div id="savedTimetablesList" class="saved-timetables-list"></div>
         </div>
@@ -192,12 +175,7 @@
           <div class="form-row">
             <div class="form-group">
               <label>Faculty Name</label>
-              <input
-                type="text"
-                id="facultyName"
-                name="facultyName"
-                placeholder="John Smith"
-                required />
+              <input type="text" id="facultyName" name="facultyName" placeholder="John Smith" required />
             </div>
             <div class="form-group">
               <label>Specialization</label>
@@ -206,7 +184,8 @@
                 id="facultySpecialization"
                 name="facultySpecialization"
                 placeholder="e.g., Data Structures, AI"
-                required />
+                required
+              />
             </div>
           </div>
           <div class="form-row">
@@ -223,7 +202,8 @@
                 id="facultyEmail"
                 name="facultyEmail"
                 placeholder="john.smith@university.edu"
-                required />
+                required
+              />
             </div>
           </div>
           <button type="submit" class="btn">Add Faculty</button>
@@ -242,21 +222,11 @@
           <div class="form-row">
             <div class="form-group">
               <label>Subject Name</label>
-              <input
-                type="text"
-                id="subjectName"
-                name="subjectName"
-                placeholder="e.g. Data Structures"
-                required />
+              <input type="text" id="subjectName" name="subjectName" placeholder="e.g. Data Structures" required />
             </div>
             <div class="form-group">
               <label>Subject Code</label>
-              <input
-                type="text"
-                id="subjectCode"
-                name="subjectCode"
-                placeholder="e.g. CS201"
-                required />
+              <input type="text" id="subjectCode" name="subjectCode" placeholder="e.g. CS201" required />
             </div>
           </div>
           <div class="form-row">
@@ -276,33 +246,15 @@
           <div class="form-row">
             <div class="form-group">
               <label>Lecture Hours</label>
-              <input
-                type="number"
-                id="lectureHours"
-                name="lectureHours"
-                placeholder="3"
-                min="0"
-                required />
+              <input type="number" id="lectureHours" name="lectureHours" placeholder="3" min="0" required />
             </div>
             <div class="form-group">
               <label>Lab Hours</label>
-              <input
-                type="number"
-                id="labHours"
-                name="labHours"
-                placeholder="2"
-                min="0"
-                required />
+              <input type="number" id="labHours" name="labHours" placeholder="2" min="0" required />
             </div>
             <div class="form-group">
               <label>Total Hours/Week</label>
-              <input
-                type="number"
-                id="totalHours"
-                name="totalHours"
-                placeholder="5"
-                min="1"
-                readonly />
+              <input type="number" id="totalHours" name="totalHours" placeholder="5" min="1" readonly />
             </div>
             <div class="form-group">
               <label>Lab Duration (per session)</label>
@@ -345,12 +297,7 @@
           <div class="form-row">
             <div class="form-group">
               <label>Room Number</label>
-              <input
-                type="text"
-                id="roomNumber"
-                name="roomNumber"
-                placeholder="e.g., A101, Lab-201"
-                required />
+              <input type="text" id="roomNumber" name="roomNumber" placeholder="e.g., A101, Lab-201" required />
             </div>
             <div class="form-group">
               <label>Room Type</label>
@@ -367,7 +314,8 @@
                 id="roomBuilding"
                 name="roomBuilding"
                 placeholder="e.g., Main Building, IT Block"
-                required />
+                required
+              />
             </div>
             <div class="form-group">
               <label>Floor</label>
@@ -384,13 +332,7 @@
           <div class="form-row">
             <div class="form-group">
               <label>Capacity</label>
-              <input
-                type="number"
-                id="roomCapacity"
-                name="roomCapacity"
-                placeholder="e.g., 60"
-                min="1"
-                required />
+              <input type="number" id="roomCapacity" name="roomCapacity" placeholder="e.g., 60" min="1" required />
             </div>
             <div class="form-group">
               <label>Equipment (Optional)</label>
@@ -398,7 +340,8 @@
                 type="text"
                 id="roomEquipment"
                 name="roomEquipment"
-                placeholder="e.g., Projector, AC, Lab Equipment" />
+                placeholder="e.g., Projector, AC, Lab Equipment"
+              />
             </div>
           </div>
           <button type="submit" class="btn">Add Room</button>
@@ -411,11 +354,7 @@
     </div>
 
     <!-- Toast Notification Container -->
-    <div
-      id="toast-container"
-      class="toast-container"
-      aria-live="polite"
-      aria-label="Notifications"></div>
+    <div id="toast-container" class="toast-container" aria-live="polite" aria-label="Notifications"></div>
 
     <!-- JavaScript for Tab Functionality and Data Management -->
     <script src="timetable.js"></script>
