login & register page added

--- a/index.html
+++ b/index.html
@@ -11,8 +11,26 @@
     <div class="container">
       <!-- Header -->
       <div class="header">
-        <h1>Interactive Timetable Generator</h1>
-        <p>Advanced Multi-Semester Scheduling System</p>
+        <div class="header-content">
+          <div class="header-text">
+            <h1>Interactive Timetable Generator</h1>
+            <p>Advanced Multi-Semester Scheduling System</p>
+          </div>
+          <div class="header-actions">
+            <div class="user-info" id="userInfo" style="display: none">
+              <span class="user-welcome"
+                >Welcome, <span id="userName">User</span></span
+              >
+              <button class="btn-logout" onclick="handleLogout()">
+                Logout
+              </button>
+            </div>
+            <div class="auth-buttons" id="authButtons">
+              <a href="login.html" class="btn-auth btn-login">Login</a>
+              <a href="register.html" class="btn-auth btn-register">Register</a>
+            </div>
+          </div>
+        </div>
       </div>
 
       <!-- Statistics Cards -->
@@ -54,7 +72,9 @@
       <!-- Timetable Generator Section -->
       <div class="generator-panel">
         <h2>Timetable Generator</h2>
-        <p>Automatically generate subjects, faculty, and optimized timetable.</p>
+        <p>
+          Automatically generate subjects, faculty, and optimized timetable.
+        </p>
         <form id="timetableGenForm" class="generator-form">
           <div class="form-row">
             <div class="form-group">
@@ -79,7 +99,12 @@
             </div>
             <div class="form-group">
               <label>Number of Students</label>
-              <input type="number" id="genStudents" placeholder="60" min="1" required />
+              <input
+                type="number"
+                id="genStudents"
+                placeholder="60"
+                min="1"
+                required />
             </div>
           </div>
           <div class="form-row">
@@ -93,7 +118,9 @@
             </div>
           </div>
 
-          <button type="submit" class="btn generate-btn">Generate Complete Timetable</button>
+          <button type="submit" class="btn generate-btn">
+            Generate Complete Timetable
+          </button>
           <div id="timetableGenStatus"></div>
         </form>
       </div>
@@ -119,14 +146,19 @@
               <h3>No Timetable Generated Yet</h3>
               <p>Use the Timetable Generator above to create your schedule</p>
               <div class="btn-container">
-                <button onclick="scrollToGenerator()" class="btn">Generate Timetable</button>
+                <button onclick="scrollToGenerator()" class="btn">
+                  Generate Timetable
+                </button>
               </div>
             </div>
           </div>
         </div>
 
         <!-- Saved Timetables Section -->
-        <div id="saved-timetables-section" class="list-section" style="display: none; margin-top: 24px">
+        <div
+          id="saved-timetables-section"
+          class="list-section"
+          style="display: none; margin-top: 24px">
           <h3>Saved Timetables</h3>
           <div id="savedTimetablesList" class="saved-timetables-list"></div>
         </div>
@@ -145,8 +177,7 @@
                 id="courseName"
                 name="courseName"
                 placeholder="e.g., Bachelor of Engineering, Master of Science"
-                required
-              />
+                required />
             </div>
             <div class="form-group">
               <label>Department Name</label>
@@ -155,8 +186,7 @@
                 id="departmentName"
                 name="departmentName"
                 placeholder="e.g., Computer Engineering, Information Technology"
-                required
-              />
+                required />
             </div>
           </div>
           <button type="submit" class="btn">Add Course & Department</button>
@@ -175,7 +205,12 @@
           <div class="form-row">
             <div class="form-group">
               <label>Faculty Name</label>
-              <input type="text" id="facultyName" name="facultyName" placeholder="John Smith" required />
+              <input
+                type="text"
+                id="facultyName"
+                name="facultyName"
+                placeholder="John Smith"
+                required />
             </div>
             <div class="form-group">
               <label>Specialization</label>
@@ -184,8 +219,7 @@
                 id="facultySpecialization"
                 name="facultySpecialization"
                 placeholder="e.g., Data Structures, AI"
-                required
-              />
+                required />
             </div>
           </div>
           <div class="form-row">
@@ -202,8 +236,7 @@
                 id="facultyEmail"
                 name="facultyEmail"
                 placeholder="john.smith@university.edu"
-                required
-              />
+                required />
             </div>
           </div>
           <button type="submit" class="btn">Add Faculty</button>
@@ -222,11 +255,21 @@
           <div class="form-row">
             <div class="form-group">
               <label>Subject Name</label>
-              <input type="text" id="subjectName" name="subjectName" placeholder="e.g. Data Structures" required />
+              <input
+                type="text"
+                id="subjectName"
+                name="subjectName"
+                placeholder="e.g. Data Structures"
+                required />
             </div>
             <div class="form-group">
               <label>Subject Code</label>
-              <input type="text" id="subjectCode" name="subjectCode" placeholder="e.g. CS201" required />
+              <input
+                type="text"
+                id="subjectCode"
+                name="subjectCode"
+                placeholder="e.g. CS201"
+                required />
             </div>
           </div>
           <div class="form-row">
@@ -246,15 +289,33 @@
           <div class="form-row">
             <div class="form-group">
               <label>Lecture Hours</label>
-              <input type="number" id="lectureHours" name="lectureHours" placeholder="3" min="0" required />
+              <input
+                type="number"
+                id="lectureHours"
+                name="lectureHours"
+                placeholder="3"
+                min="0"
+                required />
             </div>
             <div class="form-group">
               <label>Lab Hours</label>
-              <input type="number" id="labHours" name="labHours" placeholder="2" min="0" required />
+              <input
+                type="number"
+                id="labHours"
+                name="labHours"
+                placeholder="2"
+                min="0"
+                required />
             </div>
             <div class="form-group">
               <label>Total Hours/Week</label>
-              <input type="number" id="totalHours" name="totalHours" placeholder="5" min="1" readonly />
+              <input
+                type="number"
+                id="totalHours"
+                name="totalHours"
+                placeholder="5"
+                min="1"
+                readonly />
             </div>
             <div class="form-group">
               <label>Lab Duration (per session)</label>
@@ -297,7 +358,12 @@
           <div class="form-row">
             <div class="form-group">
               <label>Room Number</label>
-              <input type="text" id="roomNumber" name="roomNumber" placeholder="e.g., A101, Lab-201" required />
+              <input
+                type="text"
+                id="roomNumber"
+                name="roomNumber"
+                placeholder="e.g., A101, Lab-201"
+                required />
             </div>
             <div class="form-group">
               <label>Room Type</label>
@@ -314,8 +380,7 @@
                 id="roomBuilding"
                 name="roomBuilding"
                 placeholder="e.g., Main Building, IT Block"
-                required
-              />
+                required />
             </div>
             <div class="form-group">
               <label>Floor</label>
@@ -332,7 +397,13 @@
           <div class="form-row">
             <div class="form-group">
               <label>Capacity</label>
-              <input type="number" id="roomCapacity" name="roomCapacity" placeholder="e.g., 60" min="1" required />
+              <input
+                type="number"
+                id="roomCapacity"
+                name="roomCapacity"
+                placeholder="e.g., 60"
+                min="1"
+                required />
             </div>
             <div class="form-group">
               <label>Equipment (Optional)</label>
@@ -340,8 +411,7 @@
                 type="text"
                 id="roomEquipment"
                 name="roomEquipment"
-                placeholder="e.g., Projector, AC, Lab Equipment"
-              />
+                placeholder="e.g., Projector, AC, Lab Equipment" />
             </div>
           </div>
           <button type="submit" class="btn">Add Room</button>
@@ -354,7 +424,11 @@
     </div>
 
     <!-- Toast Notification Container -->
-    <div id="toast-container" class="toast-container" aria-live="polite" aria-label="Notifications"></div>
+    <div
+      id="toast-container"
+      class="toast-container"
+      aria-live="polite"
+      aria-label="Notifications"></div>
 
     <!-- JavaScript for Tab Functionality and Data Management -->
     <script src="timetable.js"></script>
