--- a/register.html
+++ b/register.html
@@ -78,7 +78,7 @@
             <select id="role" name="role" required>
               <option value="">Select your role</option>
               <option value="admin">Administrator</option>
-              <option value="faculty">Faculty Member</option>
+              <option value="teacher">Teacher</option>
               <option value="student">Student</option>
             </select>
           </div>
@@ -91,6 +91,59 @@
               name="institution"
               placeholder="Enter your institution name"
               required />
+          </div>
+
+          <!-- Student-specific fields -->
+          <div id="studentFields" style="display: none">
+            <div class="form-group">
+              <label for="department">Department</label>
+              <select id="department" name="department">
+                <option value="">Select department</option>
+                <option value="Computer Engineering">
+                  Computer Engineering
+                </option>
+                <option value="Information Technology">
+                  Information Technology
+                </option>
+                <option value="Artificial Intelligence & Data Science">
+                  Artificial Intelligence & Data Science
+                </option>
+              </select>
+            </div>
+
+            <div class="form-group">
+              <label for="semester">Semester</label>
+              <select id="semester" name="semester">
+                <option value="">Select semester</option>
+                <option value="Semester 1">Semester 1</option>
+                <option value="Semester 2">Semester 2</option>
+                <option value="Semester 3">Semester 3</option>
+                <option value="Semester 4">Semester 4</option>
+                <option value="Semester 5">Semester 5</option>
+                <option value="Semester 6">Semester 6</option>
+                <option value="Semester 7">Semester 7</option>
+                <option value="Semester 8">Semester 8</option>
+              </select>
+            </div>
+          </div>
+
+          <!-- Teacher-specific fields -->
+          <div id="teacherFields" style="display: none">
+            <div class="form-group">
+              <label for="teacherDepartment">Department (Optional)</label>
+              <select id="teacherDepartment" name="department">
+                <option value="">Select department</option>
+                <option value="Computer Engineering">
+                  Computer Engineering
+                </option>
+                <option value="Information Technology">
+                  Information Technology
+                </option>
+                <option value="Artificial Intelligence & Data Science">
+                  Artificial Intelligence & Data Science
+                </option>
+              </select>
+            </div>
           </div>
 
           <button type="submit" class="btn auth-btn">Create Account</button>
